--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,38 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@coreui/react": "^5.9.1",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
+    "next-cloudinary": "^6.17.5",
     "react": "19.2.1",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "19.2.1",
-    "tailwind-merge": "^3.4.0"
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.4.0",
+    "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "jsonwebtoken": "^9.0.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
